--- a/pom.xml
+++ b/pom.xml
@@ -20,6 +20,7 @@
                 <configuration>
                     <source>11</source>
                     <target>11</target>
+                    <compilerVersion>11</compilerVersion>
                 </configuration>
             </plugin>
         </plugins>
